snapshots/syntax/library/functions/string/string_function/string_concatenation.snap
---
source: src/syntax/library/functions/string/string_function.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: box
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: BinaryExpression
                  children:
                    - kind: BinaryExpression
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"+\""
                        - kind: Whitespace
                          text: " "
                        - kind: Ampersand
                          text: "&"
                        - kind: Whitespace
                          text: " "
                        - kind: CallExpression
                          children:
                            - kind: StringKeyword
                              text: String
                            - kind: LeftParenthesis
                              text: (
                            - kind: ArgumentList
                              children:
                                - kind: Argument
                                  children:
                                    - kind: BinaryExpression
                                      children:
                                        - kind: IdentifierExpression
                                          children:
                                            - kind: WidthKeyword
                                              text: width
                                        - kind: Whitespace
                                          text: " "
                                        - kind: SubtractionOperator
                                          text: "-"
                                        - kind: Whitespace
                                          text: " "
                                        - kind: NumericLiteralExpression
                                          children:
                                            - kind: IntegerLiteral
                                              text: "2"
                                - kind: Comma
                                  text: ","
                                - kind: Whitespace
                                  text: " "
                                - kind: Argument
                                  children:
                                    - kind: StringLiteralExpression
                                      children:
                                        - kind: StringLiteral
                                          text: "\"-\""
                            - kind: RightParenthesis
                              text: )
                    - kind: Whitespace
                      text: " "
                    - kind: Ampersand
                      text: "&"
                    - kind: Whitespace
                      text: " "
                    - kind: StringLiteralExpression
                      children:
                        - kind: StringLiteral
                          text: "\"+\""
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
